# grilo-plugins

./: Makefile.am  configure.ac
src/: Makefile.am
src/filesystem/: grl-filesystem.c
src/playlist/: Makefile.am  grl-playlist.c  grl-playlist.h  grl-playlist.xml
